Muisc styles and cities selector dropdown menu

--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -205,26 +205,99 @@
                                     </div>
                                 </div>
                             <hr class="my-4" />
-                            <!-- CONTACT INFORMATION -->
-                            <h6 class="heading-small text-muted mb-4">Preferences</h6>
-                            <div class="pl-lg-4">
-                                <div class="row">
-                                    <div class="col-md-12">
+                            <!-- PREFERENCES -->
+                                <h6 class="heading-small text-muted mb-4">Preferences</h6>
+                                <!-- PREFERENCES: MUSIC -->
+                                <div class="container">
+                                    <div class="row">
                                         <div class="form-group">
-                                            <label class="form-control-label" for="input-address">Music Styles</label>
-                                            <input id="input-address" class="form-control" placeholder="Your favourite music styles" value="" type="text">
+                                            <label class="form-control-label">Music Styles</label>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-xl-6 order-xl-2 dropdown">
+                                            <button aria-expanded="true" aria-haspopup="true"
+                                                    class="btn btn-default dropdown-toggle" data-toggle="dropdown"
+                                                    id="dropdownMenuMUSIC" type="button">
+                                                <i class="ni ni-note-03"></i>
+                                                CHOOSE UP TO 10
+                                                <span class="caret"></span>
+                                            </button>
+                                            <ul aria-labelledby="dropdownMenu1"
+                                                class="dropdown-menu checkbox-menu allow-focus">
+                                                <li><label><input type="checkbox"> Rock </label></li>
+                                                <li><label><input type="checkbox"> Pop </label></li>
+                                                <li><label><input type="checkbox"> Rap </label></li>
+                                                <li><label><input type="checkbox"> Trap </label></li>
+                                                <li><label><input type="checkbox"> R&B </label></li>
+                                                <li><label><input type="checkbox"> Soul </label></li>
+                                                <li><label><input type="checkbox"> Funk </label></li>
+                                                <li><label><input type="checkbox"> Jazz </label></li>
+                                                <li><label><input type="checkbox"> Classic </label></li>
+                                                <li><label><input type="checkbox"> Romantic </label></li>
+                                                <li><label><input type="checkbox"> Original Soundtrack </label></li>
+                                                <li><label><input type="checkbox"> Latin </label></li>
+                                                <li><label><input type="checkbox"> Disco </label></li>
+                                                <li><label><input type="checkbox"> No se </label></li>
+                                                <li><label><input type="checkbox"> Algo </label></li>
+
+                                            </ul>
+                                        </div>
+                                        <div class="col-xl-6 order-xl-2 form-group">
+                                            <h4>Rock, Pop, Trap, Jazz, Classic, Funk, Disco</h4>
                                         </div>
                                     </div>
                                 </div>
-                                <div class="row">
-                                    <div class="col-md-12">
+                                <!-- PREFERENCES: CITIES -->
+                                <div class="container">
+                                    <div class="row">
+                                        <p> </p>
+                                    </div>
+                                    <div class="row">
                                         <div class="form-group">
-                                            <label class="form-control-label" for="input-city">Cities</label>
-                                            <input type="text" id="input-city" class="form-control" placeholder="Your favorite cities" value="">
+                                            <label class="form-control-label">Cities</label>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-xl-6 order-xl-2 dropdown">
+                                            <button aria-expanded="true" aria-haspopup="true"
+                                                    class="btn btn-default dropdown-toggle" data-toggle="dropdown"
+                                                    id="dropdownMenuCITIES" type="button">
+                                                <i class="ni ni-world-2"></i>
+                                                CHOOSE UP TO 5
+                                                <span class="caret"></span>
+                                            </button>
+                                            <ul aria-labelledby="dropdownMenu1"
+                                                class="dropdown-menu checkbox-menu allow-focus">
+                                                <li><label><input type="checkbox"> Madrid </label></li>
+                                                <li><label><input type="checkbox"> Lisbon </label></li>
+                                                <li><label><input type="checkbox"> London </label></li>
+                                                <li><label><input type="checkbox"> Paris </label></li>
+                                                <li><label><input type="checkbox"> New York </label></li>
+                                                <li><label><input type="checkbox"> Boston </label></li>
+                                                <li><label><input type="checkbox"> Chicago </label></li>
+                                                <li><label><input type="checkbox"> L.A. </label></li>
+                                                <li><label><input type="checkbox"> Rome </label></li>
+                                                <li><label><input type="checkbox"> Dublin </label></li>
+                                                <li><label><input type="checkbox"> Berlin </label></li>
+                                                <li><label><input type="checkbox"> Oslo </label></li>
+                                                <li><label><input type="checkbox"> Stockholm </label></li>
+                                                <li><label><input type="checkbox"> Helsinki </label></li>
+                                                <li><label><input type="checkbox"> Viena </label></li>
+                                                <li><label><input type="checkbox"> Berna </label></li>
+                                                <li><label><input type="checkbox"> Sidney </label></li>
+                                                <li><label><input type="checkbox"> Montreal </label></li>
+                                                <li><label><input type="checkbox"> Tallin </label></li>
+
+                                            </ul>
+                                        </div>
+                                        <div class="col-xl-6 order-xl-2 form-group">
+                                            <h4>Madrid, Lisbon, New York, Helsinki</h4>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+
+
                             <hr class="my-4" />
                             <!-- UPLOAD IMAGE -->
                             <h6 class="heading-small text-muted mb-4">Profile image</h6>
